# aws-glue-availability

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  release.yml
awsglueavailability/: __main__.py  client.py
test/unit/: conftest.py  helper.py
test/unit/client/: test_glue.py
tests/unit/: test_app.py
tests/unit/client/: test_ec2.py  test_glue.py
